--- a/templates/add_villain.html
+++ b/templates/add_villain.html
@@ -13,42 +13,29 @@
 
 </head>
 <body background="{{  url_for('static',  filename='css/img/background.jpg')  }}">
-	<nav class="nav-wrapper transparent">
-		<div class="conatainer">
-			<a class="sidenav-trigger" data-target="mobile-links" href="#"><i class="material-icons">menu</i></a>
-			<ul class="right hide-on-med-and-down">
-				<li>
-					<a href="{{  url_for(  'index')  }}">Home</a>
-				</li>
-				<li>
-					<a href="{{  url_for(  'heroes')  }}">Heroes</a>
-				</li>
-				<li>
-					<a href="{{  url_for(  'villains')  }}">Villians</a>
-				</li>
-				<li>
-					<a href="{{  url_for(  'register')  }}">Sign-Up</a>
-				</li>
-				<li>
-					<a href="{{  url_for(  'profile')  }}"><i class="material-icons">account_box</i></a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-	<ul class="sidenav" id="mobile-links">
-		<li>
-			<a href="{{  url_for(  'index')  }}">Home</a>
-		</li>
-		<li>
-			<a href="{{  url_for(  'heroes')  }}">Heroes</a>
-		</li>
-		<li>
-			<a href="{{  url_for(  'villains')  }}">Villians</a>
-		</li>
-		<li>
-			<a href="{{  url_for(  'register')  }}">Sign-Up</a>
-		</li>
-	</ul>
+	   <nav class="nav-wrapper transparent">
+        <div class="conatainer">
+            <a href="#" class="sidenav-trigger" data-target="mobile-links">
+            <i class="material-icons">menu</i>
+            </a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="{{ url_for( 'index') }}">Home</a></li>
+                <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
+                <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
+                <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
+                <li><a href="{{ url_for('profile.html') }}"><i class="material-icons">account_box</i></a></li>
+            </ul>
+          
+        
+        </div>
+    </nav>
+    <ul class="sidenav" id="mobile-links">
+                <li><a href="{{ url_for( 'index') }}">Home</a></li>
+                <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
+                <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
+                <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
+                <li><a href="{{ url_for('profile.html') }}"><i class="material-icons">account_box</i></a></li>
+            </ul>
 	<div id="wrapperHeader">
 		<div id="header"><img class="center" src="{{  url_for('static',  filename='Marvel1.jpg')  }}"></div>
 	</div>
