--- a/templates/heroes.html
+++ b/templates/heroes.html
@@ -13,28 +13,8 @@
 
     <title>Marvel DB - Heroes</title>
 </head>
-<body background="{{ url_for('static', filename='css/img/background.jpg') }}">
-{% if user %}
+<body background=" {{ url_for('static', filename='css/img/background.jpg') }}" class="background  ">
     <nav class="nav-wrapper transparent">
-        <div class="conatainer">
-            <a href="#" class="sidenav-trigger" data-target="mobile-links">
-            <i class="material-icons">menu</i>
-            </a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for( 'index') }}">Home</a></li>
-                <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
-                <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
-            </ul>
-        </div>
-    </nav>
-    <ul class="sidenav" id="mobile-links">
-                <li><a href="{{ url_for( 'index') }}">Home</a></li>
-                <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
-                <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
-            </ul>
-
-            {% elif not user %}
-        <nav class="nav-wrapper transparent">
         <div class="conatainer">
             <a href="#" class="sidenav-trigger" data-target="mobile-links">
             <i class="material-icons">menu</i>
@@ -46,6 +26,8 @@
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
                 <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
             </ul>
+          
+        
         </div>
     </nav>
     <ul class="sidenav" id="mobile-links">
@@ -53,8 +35,8 @@
                 <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
+                <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
             </ul>
-{% endif %}
  
     <div id="wrapperHeader">
     <div id="header">
