--- a/templates/login.html
+++ b/templates/login.html
@@ -39,6 +39,8 @@
                 <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
+                <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
+
             </ul>
 
     <div id="wrapperHeader">
