--- a/templates/register.html
+++ b/templates/register.html
@@ -20,7 +20,7 @@
 
 </head>
 <body background="{{ url_for('static', filename='css/img/background.jpg') }}">
-    <nav class="nav-wrapper transparent">
+      <nav class="nav-wrapper transparent">
         <div class="conatainer">
             <a href="#" class="sidenav-trigger" data-target="mobile-links">
             <i class="material-icons">menu</i>
@@ -41,8 +41,8 @@
                 <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
+                <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
             </ul>
- 
 
     <div id="wrapperHeader">
         <div id="header">
