--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         <a class="waves-effect waves-light btn-large #d50000 red accent-4" style="margin-bottom: 25px;" onclick="window.location.href='{{ url_for( 'villains') }}';">Villains</a>
     </div>
 </div>
-    <h3> Search for your heroes </h3>
+    <h3 class="center white-text text-lighten-2"> Search for Your favourite Heroes or Villains</h3>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <ul class="flashes">
