--- a/templates/profile.html
+++ b/templates/profile.html
@@ -29,6 +29,7 @@
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
                 <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('logout') }}"><i class="material-icons">exit_to_app</i></a></li>
             </ul>
           
         
@@ -39,7 +40,10 @@
                 <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
+                <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('logout') }}"><i class="material-icons">exit_to_app</i></a></li>
             </ul>
+ 
 
     <div class="center" id="wrapperHeader">
         <div id="header">
