--- a/templates/heroes.html
+++ b/templates/heroes.html
@@ -25,6 +25,7 @@
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
                 <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('logout') }}"><i class="material-icons">exit_to_app</i></a></li>
             </ul>
           
         
@@ -36,6 +37,7 @@
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
                 <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('logout') }}"><i class="material-icons">exit_to_app</i></a></li>
             </ul>
  
     <div id="wrapperHeader">
