--- a/templates/login.html
+++ b/templates/login.html
@@ -29,6 +29,7 @@
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
                 <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('logout') }}"><i class="material-icons">exit_to_app</i></a></li>
             </ul>
           
         
@@ -40,8 +41,9 @@
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
                 <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
-
+                <li><a href="{{ url_for('logout') }}"><i class="material-icons">exit_to_app</i></a></li>
             </ul>
+ 
 
     <div id="wrapperHeader">
         <div id="header">
