--- a/templates/register.html
+++ b/templates/register.html
@@ -31,6 +31,7 @@
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
                 <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('logout') }}"><i class="material-icons">exit_to_app</i></a></li>
             </ul>
           
         
@@ -42,13 +43,9 @@
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
                 <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('logout') }}"><i class="material-icons">exit_to_app</i></a></li>
             </ul>
-
-    <div id="wrapperHeader">
-        <div id="header">
-            <img src="{{ url_for('static', filename='Marvel1.jpg') }}" class="center">
-        </div> 
-    </div>
+ 
 
     <h1 class="center white-text text-lighten-2"> Sign-Up </h1>
 
