--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -24,7 +24,8 @@
                 <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
-                <li><a href="{{ url_for( 'profile') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('logout') }}"><i class="material-icons">exit_to_app</i></a></li>
             </ul>
           
         
@@ -35,6 +36,8 @@
                 <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
+                <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('logout') }}"><i class="material-icons">exit_to_app</i></a></li>
             </ul>
  
     <div id="wrapperHeader">
