added submit button for adding heros to database

--- a/templates/add_villain.html
+++ b/templates/add_villain.html
@@ -94,6 +94,8 @@
 							<input class="validate" id="createdBy" type="email"> <label for="email">Created by</label>
 						</div>
 					</div>
+                    <button type="sumbit" formmethod="post" onclick="window.location.href='{{ url_for('profile') }}';" class="btn waves-effect #d50000 red accent-4 col s12">
+                    Submit</button>
 				</form>
 			</div>
 		</div>
