--- a/templates/add_hero.html
+++ b/templates/add_hero.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css"><!--Custom CSS-->
 	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
-	<title>Marvel DB - Add A Hero</title>
+	<title>Marvel DB - Add A Villain</title>
 </head>
 <body background="{{ url_for('static', filename='css/img/background.jpg') }}">
 	<nav class="nav-wrapper transparent">
@@ -81,24 +81,29 @@
 					</div>
 					<div class="row">
 						<div class="input-field col s12">
-							<input class="validate" id="MarvelCinematicAppearance" type="email"> <label for="email">Marvel Cinematic Appearances</label>
+							<input class="validate" id="MarvelCinematicAppearance" type="text"> <label for="email">Marvel Cinematic Appearances</label>
 						</div>
 					</div>
 					<div class="row">
 						<div class="input-field col s12">
-							<input class="validate" id="playedBy" type="email"> <label for="email">Played by</label>
+							<input class="validate" id="playedBy" type="text"> <label for="email">Played by</label>
 						</div>
 					</div>
 					<div class="row">
 						<div class="input-field col s12">
-							<input class="validate" id="createdBy" type="email"> <label for="email">Created by</label>
+							<input class="validate" id="createdBy" type="text"> <label for="email">Created by</label>
 						</div>
 					</div>
-                     <button type="sumbit" formmethod="post" onclick="window.location.href='{{ url_for('profile') }}';" class="btn waves-effect #d50000 red accent-4 col s12">
+                    <button type="sumbit" formmethod="post" onclick="window.location.href='{{ url_for('profile') }}';" class="btn waves-effect #d50000 red accent-4 col s12">
                     Submit</button>
 				</form>
 			</div>
 		</div>
 	</div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
+
