--- a/templates/add_villain.html
+++ b/templates/add_villain.html
@@ -81,17 +81,17 @@
 					</div>
 					<div class="row">
 						<div class="input-field col s12">
-							<input class="validate" id="MarvelCinematicAppearance" type="email"> <label for="email">Marvel Cinematic Appearances</label>
+							<input class="validate" id="MarvelCinematicAppearance" type="text"> <label for="email">Marvel Cinematic Appearances</label>
 						</div>
 					</div>
 					<div class="row">
 						<div class="input-field col s12">
-							<input class="validate" id="playedBy" type="email"> <label for="email">Played by</label>
+							<input class="validate" id="playedBy" type="text"> <label for="email">Played by</label>
 						</div>
 					</div>
 					<div class="row">
 						<div class="input-field col s12">
-							<input class="validate" id="createdBy" type="email"> <label for="email">Created by</label>
+							<input class="validate" id="createdBy" type="text"> <label for="email">Created by</label>
 						</div>
 					</div>
                     <button type="sumbit" formmethod="post" onclick="window.location.href='{{ url_for('profile') }}';" class="btn waves-effect #d50000 red accent-4 col s12">
@@ -100,5 +100,10 @@
 			</div>
 		</div>
 	</div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
+
